--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # sbt specific
 .cache/
+.cache*
 .history/
 .lib/
 dist/*
@@ -10,11 +11,16 @@ target/
 lib_managed/
 src_managed/
 project/boot/
+project/project
 project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+bin/
+.settings
+.classpath
+.project
 
 # =========================
 # Operating System Files
