--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/766cd1435a839e757239
-    on_success: change  # options: [always|never|change] default: always
+    on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
