--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ notifications:
     on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
+script: "sbt clean coverage test"
+after_success: "sbt coveralls"
