--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,6 @@ notifications:
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
 script: "sbt clean coverage test"
-after_success: "sbt coveralls"
+after_success:
+  - jdk_switcher use oraclejdk7
+  - sbt coveralls
