Workaround for sbt-coveralls FileNotFoundException till 1.1.0 is released. See: https://github.com/scoverage/sbt-coveralls/issues/49

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,6 @@ notifications:
     on_start: false     # default: false
 script: "sbt clean coverage test"
 after_success:
+  - ln -s src/main/scala/com ./
   - sbt coveralls
+  - rm -f com
